# TSGui

./: CMakeLists.txt  Gui.hpp  README.md  TSGui.hpp  TSGui.pc.in
CanvasUpdater/: CanvasUpdater.cpp  CanvasUpdater.hpp
Creators/: Creators.hpp  Creators.tpp
Getters/: Getters.cpp  Getters.hpp  Getters.tpp
Handlers/: Handlers.cpp  Handlers.hpp
Setters/: Setters.hpp  Setters.tpp
TSGui/: TSGui.hpp
